--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -1,8 +1,13 @@
 FROM ubuntu:latest
 
+ENV DEBIAN_FRONTEND=noninteractive
+
+USER root
+
 RUN apt update && \
   apt install bash && \
   apt install nano && \
-  apt install ansible -y
+  apt install ansible -y && \
+  apt install awscli -y
 
 
