--- a/2/docker-compose.yml
+++ b/2/docker-compose.yml
@@ -3,36 +3,40 @@ services:
 
   nginx:
     image: nginx
+    container_name: nginx
     restart: always
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - /www/web:/usr/share/nginx/html
+      - "./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
+      - "./www/web:/usr/share/nginx/html/index.php:ro"
+
     ports:
       - "80:80"
     links:
-      - php:php
+      - php
     networks:
       - esnet
 
   php:
     build: ./php
+    container_name: php
     restart: always
     expose:
       - "9000"
     links:
       - redis
     volumes:
-      - /www/web:/usr/share/nginx/html
+      - "./www/web:/usr/share/nginx/html/index.php:ro"
     networks:
       - esnet
  
   redis:
     image: redis
+    container_name: redis
     restart: always
     ports:
-      - "6379:6379"
+      - "6379"
     volumes:
-      - /data/redis:/data
+      - "./data/redis:/data:rw"
     command: redis-server --appendonly yes
     networks:
       - esnet
