--- a/2/php/Dockerfile
+++ b/2/php/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd 
 
-RUN docker-php-ext-install pdo_mysql pdo mysqli
+RUN docker-php-ext-install pdo
 
 RUN \
   curl 'http://pecl.php.net/get/redis-3.1.5.tgz' -o /tmp/redis-3.1.5.tgz  \
