--- a/2/docker-compose.yml
+++ b/2/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: always
     volumes:
       - "./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
-      - "./www/web:/usr/share/nginx/html/index.php:ro"
+      - "./www/web/index.php:/usr/share/nginx/html/index.php:ro"
 
     ports:
       - "80:80"
@@ -25,7 +25,7 @@ services:
     links:
       - redis
     volumes:
-      - "./www/web:/usr/share/nginx/html/index.php:ro"
+      - "./www/web/index.php:/usr/share/nginx/html/index.php:ro"
     networks:
       - esnet
  
